[package]
name = "enum-methods"
version = "0.0.4"
authors = ["Alek Ratzloff <alekratz@gmail.com>"]
homepage = "https://github.com/alekratz/enum-methods"
description = "Generates methods for each enum variant."
documentation = "https://docs.rs/enum-methods/0.0.4/enum_methods"
repository = "https://github.com/alekratz/enum-methods"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = "0.11"
quote = "0.3"
lazy_static = "0.2"
