[package]
name = "enum-methods"
version = "0.0.8"
authors = ["Alek Ratzloff <alekratz@gmail.com>"]
homepage = "https://github.com/alekratz/enum-methods"
description = "Generates methods for each enum variant."
documentation = "https://docs.rs/enum-methods/0.0.8/enum_methods"
repository = "https://github.com/alekratz/enum-methods"
license = "Apache-2.0"

keywords = ["predicate", "variant", "derive", "is", "enum"]

[badges]
travis-ci = { repository = "alekratz/enum-methods", branch = "master" }

[lib]
proc-macro = true

[dependencies]
syn = "0.11"
quote = "0.3"
